--- a/desafio16.css
+++ b/desafio16.css
@@ -2,4 +2,13 @@ body{
     width: 100%;
     min-height: 100vh;
     background: linear-gradient(90deg,#439bb6 0%, #d1339c 100%);
+    display: flex;
+    justify-contet: center;
+    align-items: center;
+}
+
+.tela{
+background-color:#fafafa;
+border-radius:10px;
+box-shadow:0 2px 5px rgb(244,248,6);
 }
