--- a/desafio16.css
+++ b/desafio16.css
@@ -11,4 +11,8 @@ body{
 background-color:#fafafa;
 border-radius:10px;
 box-shadow:0 2px 5px rgb(244,248,6);
+width: 400pX:
+max-width: 100%;
+overflow: hidden;
+padding: 20px;
 }
