--- a/desafio16b.css
+++ b/desafio16b.css
@@ -11,3 +11,14 @@ box-shadow: 0 2px 5px rgba( 0, 0, 0, 0.3);
 max-width: 100%;
 padding: 20px;
 }
+
+.main-image{
+  display: flex;
+  justify-content: center;
+}
+
+.thumbnails{
+  margin-top: 25px;
+  border-radius: 10px;
+  box-shadow: 0 2px 5px rgba( 11, 0, 0, 0.3) ;
+}
