--- a/desafio18.css
+++ b/desafio18.css
@@ -1,6 +1,6 @@
 
 body {
-    background: linear-gradient(to bottom right, rgb(128, 0, 70), rgb(219, 70, 174));
+    background: linear-gradient(to bottom right, green, yellow);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -21,13 +21,13 @@ body {
 
 input[type="number"] {
     padding: 10px;
-    border: 1px solid #444242;
+    border: 1px solid #ccc;
     border-radius: 5px;
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
 }
 
 button {
-    background-color: #6a4caf; /* Verde */
+    background-color: #4CAF50; /* Verde */
     color: white;
     padding: 10px 20px;
     border: none;
@@ -39,5 +39,5 @@ button {
 }
 
 button:hover {
-    background-color: #0dc478; /* Verde mais escuro */
+    background-color: #3599f1; /* Verde mais escuro */
 }
