--- a/desafio19.css
+++ b/desafio19.css
@@ -1,5 +1,6 @@
+
 body {
-    background: linear-gradient(to bottom right, green, yellow);
+    background: linear-gradient(to bottom right, rgb(209, 114, 212), rgb(255, 0, 221));
     display: flex;
     justify-content: center;
     align-items: center;
@@ -26,7 +27,7 @@ input[type="number"] {
 }
 
 button {
-    background-color: #4CAF50; /* Verde */
+    background-color: #534caf; /* Verde */
     color: white;
     padding: 10px 20px;
     border: none;
@@ -38,5 +39,5 @@ button {
 }
 
 button:hover {
-    background-color: #3599f1; /* Verde mais escuro */
+    background-color: #f1b535; /* Verde mais escuro */
 }
